@@ -168,7 +168,9 @@ Global
 		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|Mixed Platforms.ActiveCfg = Debug|x86
 		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|Mixed Platforms.Build.0 = Debug|x86
 		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|Win32.ActiveCfg = Debug|x86
+		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|Win32.Build.0 = Debug|x86
 		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|x64.ActiveCfg = Debug|x86
+		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|x64.Build.0 = Debug|x86
 		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|x86.ActiveCfg = Debug|x86
 		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.Debug|x86.Build.0 = Debug|x86
 		{DF5E3B71-C49A-42B7-8B61-44349C54C1CB}.DVD-5|Mixed Platforms.ActiveCfg = Debug|x86
@@ -206,6 +208,7 @@ Global
 		{EB3D005B-1E6A-4BAC-9678-77427BD43799}.Debug|Win32.ActiveCfg = Debug|Win32
 		{EB3D005B-1E6A-4BAC-9678-77427BD43799}.Debug|Win32.Build.0 = Debug|Win32
 		{EB3D005B-1E6A-4BAC-9678-77427BD43799}.Debug|x64.ActiveCfg = Debug|Win32
+		{EB3D005B-1E6A-4BAC-9678-77427BD43799}.Debug|x64.Build.0 = Debug|Win32
 		{EB3D005B-1E6A-4BAC-9678-77427BD43799}.Debug|x86.ActiveCfg = Debug|Win32
 		{EB3D005B-1E6A-4BAC-9678-77427BD43799}.DVD-5|Mixed Platforms.ActiveCfg = Debug|Win32
 		{EB3D005B-1E6A-4BAC-9678-77427BD43799}.DVD-5|Mixed Platforms.Build.0 = Debug|Win32
